Send email on invite when offline

--- a/server/src/main/resources/messages_en.properties
+++ b/server/src/main/resources/messages_en.properties
@@ -1,3 +1,5 @@
 game.gwt.name=Ranchers Of The Old West
 email.turn.subject=Your turn to play {0} started at {1}
 email.turn.body=<p>Howdy!</p><br/><p>It is your turn to play {0} started at {1}.</p><p><a href="{2}">Play turn</a></p><br/>Sincerely,<br/>
+email.invited.subject=You're invited to play {0} with {1}
+email.invited.body=<p>Howdy!</p><br/><p>You're invited to play {0] with {1}.</p><p><a href="{2}">Go to table</a></p><br/>Sincerely,<br/>
