--- a/server/src/main/resources/messages_nl.properties
+++ b/server/src/main/resources/messages_nl.properties
@@ -1,3 +1,5 @@
 game.gwt.name=Ranchers Of The Old West
 email.turn.subject=Jouw beurt om te spelen bij {0} gestart op {1}
 email.turn.body=<p>Hallo!</p><br/><p>Het is jouw beurt om te spelen bij {0} gestart op {1}.</p><p><a href="{2}">Speel beurt</a></p><br/>Groeten,<br/>
+email.invited.subject=Je bent uitgenodigd om {0} te spelen met {1}
+email.invited.body=<p>Hallo!</p><br/><p>Je bent uitgenodigd om {0} te spelen met {1}.</p><p><a href="{2}">Ga naar tafel</a></p><br/>Groeten,<br/>
