--- a/server/src/main/resources/messages.properties
+++ b/server/src/main/resources/messages.properties
@@ -1,4 +1,5 @@
 game.gwt.name=Ranchers Of The Old West
+game.big-bazar.name=Big Bazar
 email.ended.subject={0} has ended at {1}
 email.ended.body=<p>Howdy!</p><br/><p>Your game of {0} has ended at {1}.</p><p><a href="{2}">Go to table</a></p><br/>Sincerely,<br/>
 email.turn.subject=Your turn to play {0} started at {1}
