--- a/server/src/main/resources/messages_nl.properties
+++ b/server/src/main/resources/messages_nl.properties
@@ -1,4 +1,5 @@
 game.gwt.name=Ranchers Of The Old West
+game.big-bazar.name=De Grote Bazaar
 email.turn.subject=Jouw beurt om te spelen bij {0} gestart op {1}
 email.turn.body=<p>Hallo!</p><br/><p>Het is jouw beurt om te spelen bij {0} gestart op {1}.</p><p><a href="{2}">Speel beurt</a></p><br/>Groeten,<br/>
 email.invited.subject=Je bent uitgenodigd om {0} te spelen met {1}
