Email templates using Velocity

--- a/server/src/main/resources/messages.properties
+++ b/server/src/main/resources/messages.properties
@@ -1,8 +1,13 @@
 game.gwt.name=Ranchers Of The Old West
 game.big-bazar.name=Big Bazar
+email.salutation=Howdy!
+email.greeting=Sincerely,
 email.ended.subject={0} has ended at {1}
-email.ended.body=<p>Howdy!</p><br/><p>Your game of {0} has ended at {1}.</p><p><a href="{2}">Go to table</a></p><br/>Sincerely,<br/>
+email.ended.body=Your game of {0} has ended at {1}.
+email.ended.action=Go to table
 email.turn.subject=Your turn to play {0} started at {1}
-email.turn.body=<p>Howdy!</p><br/><p>It is your turn to play {0} started at {1}.</p><p><a href="{2}">Play turn</a></p><br/>Sincerely,<br/>
+email.turn.body=It is your turn to play {0} started at {1}.
+email.turn.action=Play turn
 email.invited.subject=You''re invited to play {0} with {1}
-email.invited.body=<p>Howdy!</p><br/><p>You''re invited to play {0} with {1}.</p><p><a href="{2}">Go to table</a></p><br/>Sincerely,<br/>
+email.invited.body=You''re invited to play {0} with {1}.
+email.invited.action=Go to table
