--- a/server/src/main/resources/messages_nl.properties
+++ b/server/src/main/resources/messages_nl.properties
@@ -1,6 +1,13 @@
 game.gwt.name=Ranchers Of The Old West
 game.big-bazar.name=De Grote Bazaar
+email.salutation=Hallo!
+email.greeting=Groeten,
+email.ended.subject={0} is geëindigd op {1}
+email.ended.body=Je spel {0} is geëindigd op {1}.
+email.ended.action=Ga naar tafel
 email.turn.subject=Jouw beurt om te spelen bij {0} gestart op {1}
-email.turn.body=<p>Hallo!</p><br/><p>Het is jouw beurt om te spelen bij {0} gestart op {1}.</p><p><a href="{2}">Speel beurt</a></p><br/>Groeten,<br/>
+email.turn.body=Het is jouw beurt om te spelen bij {0} gestart op {1}.
+email.turn.action=Speel beurt
 email.invited.subject=Je bent uitgenodigd om {0} te spelen met {1}
-email.invited.body=<p>Hallo!</p><br/><p>Je bent uitgenodigd om {0} te spelen met {1}.</p><p><a href="{2}">Ga naar tafel</a></p><br/>Groeten,<br/>
+email.invited.body=Je bent uitgenodigd om {0} te spelen met {1}.
+email.invited.action=Ga naar tafel
