Add GWT2 strings

--- a/server/src/main/resources/messages.properties
+++ b/server/src/main/resources/messages.properties
@@ -1,4 +1,5 @@
 game.gwt.name=Ranchers Of The Old West
+game.gwt2.name=Ranchers Of The Old West (2nd edition)
 game.big-bazar.name=Big Bazar
 email.salutation=Howdy!
 email.greeting=Sincerely,
