--- a/server/src/main/resources/messages_nl.properties
+++ b/server/src/main/resources/messages_nl.properties
@@ -1,4 +1,5 @@
 game.gwt.name=Ranchers Of The Old West
+game.gwt2.name=Ranchers Of The Old West (2e editie)
 game.big-bazar.name=De Grote Bazaar
 email.salutation=Hallo!
 email.greeting=Groeten,
